--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-
+ 
 body {
   padding-left: 2em;
   padding-top: 1em;
@@ -10,4 +10,8 @@ body {
 
 .selected {
   background-color: rgb(128, 128, 128);
+}
+
+.completed {
+  text-decoration: line-through solid rgb(0, 0, 0);
 }
